fixed main title letter spacing, gallery captions, gallery arrows, main nav spacing bug

--- a/js/owl-carousel-1.3.2/owl.theme.css
+++ b/js/owl-carousel-1.3.2/owl.theme.css
@@ -11,17 +11,16 @@
 /* Styling Next and Prev buttons */
 
 .owl-theme .owl-controls .owl-buttons div{
-	color: #FFF;
+	color: #353535;
 	display: inline-block;
 	zoom: 1;
 	*display: inline;/*IE7 life-saver */
 	margin: 5px;
 	padding: 3px 10px;
-	font-size: 12px;
+	font-size: 22px;
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
 	border-radius: 30px;
-	background: #869791;
 	filter: Alpha(Opacity=50);/*IE7 fix*/
 	opacity: 0.5;
 }
