--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h1 {
   font-family: Railway;
   text-transform: uppercase;
   font-size: 14px;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
   color: #eF4823;
 }
 .script {
@@ -64,6 +64,7 @@ h1 {
   text-transform: none;
   color:#353535;
   padding-bottom: 15px;
+  letter-spacing: normal;
 }
 h2,
 h2 * {
@@ -85,6 +86,11 @@ h3 {
   font-size: 13px;
   letter-spacing: 1px;
   color:#353535
+  padding-top:3px;
+}
+.gallery{
+  margin-top:10px;
+  color:#ef4823;
 }
 h4,
 h4 * {
@@ -118,6 +124,15 @@ a:link,
 a:active,
 a:visited {
   color: #ef4823;
+}
+hr{
+  width: 25px;
+  align="center"
+  height: 1px;
+  noshade;
+  border:0;
+  border-top:1px solid #acdad2;
+  padding:0;
 }
 .subtitle {
   top: 230px;
@@ -164,7 +179,7 @@ a:visited {
 }
 .center {
   text-align: center;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
 }
 #header {
   z-index: 5;
@@ -201,7 +216,7 @@ a:visited {
   background: url(images/bookmark3.png) no-repeat
 }
 #navigation .menu-item {
-  width: 10%;
+  width: 25%;
   display: inline-block;
 }
 #navigation .menu-item h2 {
@@ -293,7 +308,7 @@ a:visited {
   max-width: 800px;
 }
 .owl-buttons {
-  top: 0;
+  top: -10px;
   position: absolute;
   width: 100%;
 }
@@ -321,7 +336,7 @@ a:visited {
 	#header {
     top: 60px;
   }
-	#title {
+  #title {
     margin-bottom: 10px;
   }
   #navigation .menu-item {
@@ -347,8 +362,8 @@ a:visited {
  * to reach full height, but absolute position breaks
  * scroll, so only turn it on when we're confident
  * we don't need to scroll the page. */
-@media screen and (min-height: 1024px) {
-    #content #about.page.active {
-      position: absolute;
-    }
+ @media screen and (min-height: 1024px) {
+  #content #about.page.active {
+    position: absolute;
+  }
 }
